--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -58,6 +58,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
 #        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
+          cd infra/
           sudo docker-compose stop
           sudo docker-compose rm web
           touch .env
