change docker compose

--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -23,6 +23,10 @@ jobs:
       run: |
         python -m flake8
 
+    - name: Start pytest
+      run: |
+        pytest
+
     
 
   build_and_push_to_docker_hub:
@@ -57,8 +61,8 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-          sudo docker-compose stop
-          sudo docker-compose rm web
+          sudo docker compose stop
+          sudo docker compose rm web
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
