--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -19,12 +19,15 @@ jobs:
         cd api_yamdb/
         pip install -r requirements.txt 
 
-    - name: Test with flake8 and django tests
+    - name: Test with flake8
+      run: |
+        python -m flake8
+
+    - name: Start pytest
       run: |
         pytest
-        python -m flake8
-        cd api_yamdb/
-        python manage.py test
+
+    
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -50,6 +53,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
@@ -57,10 +61,9 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }}
-#        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
         script: |
-          sudo docker-compose stop
-          sudo docker-compose rm web
+          sudo docker compose stop
+          sudo docker compose rm web
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -68,7 +71,7 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          sudo docker-compose up -d 
+          sudo docker compose up -d 
 
   send_message:
     runs-on: ubuntu-latest
